fixed spacing issues

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -69,6 +69,10 @@ hr.star-primary:after {
 
 .header-min-height {
   min-height: 90px;
+}
+
+#about h3 {
+  text-align: center;
 }  
 
 section {
@@ -105,7 +109,12 @@ section.success {
 .medium-feed {
   background-color: #eef3f5;
   padding: 10px;
-}   
+  text-align: center;
+} 
+
+.medium-feed img {
+  margin-bottom: 20px;
+}  
 
 @media (max-width: 767px) {
   section {
